--- a/design/component/breadcrumb.html
+++ b/design/component/breadcrumb.html
@@ -197,7 +197,7 @@
 </div>
 
                             </div>
-                            <p class="usage"><span>Usage</span> : prefix <code>active</code> to <code>section</code>.</p>
+                            <p class="usage"><span>Usage</span> : insert a class <code>.active</code> before the class <code>.section</code>.</p>
                             <div class="source">
 <pre>
 <code class="html hljs xml">
@@ -229,7 +229,7 @@
       <div class="section">Staff</div>
     </div>
                             </div>
-                            <p class="usage"><span>Usage</span> : prefix <code>small</code> to <code>breadcrumb</code>.</p>
+                            <p class="usage"><span>Usage</span> : insert a class <code>.small</code> before the class <code>.breadcrumb</code>.</p>
                             <div class="source">
 <pre>
 <code class="html hljs xml">
@@ -256,8 +256,7 @@
       <div class="section">Staff</div>
     </div>
                             </div>
-                            <p class="usage"><span>Usage</span> : prefix <code>large</code> to <code>breadcrumb</code>
-                            <div class="source">
+                            <p class="usage"><span>Usage</span> : insert a class <code>.large</code> before the class <code>.breadcrumb</code>.</p><div class="source">
 <pre>
 <code class="html hljs xml">
 &lt;div class=&quot;ui large breadcrumb&quot;&gt;
@@ -283,8 +282,7 @@
       <div class="section">Staff</div>
     </div>
                             </div>
-                            <p class="usage"><span>Usage</span> : prefix <code>huge</code> to <code>breadcrumb</code>
-                            <div class="source">
+                            <p class="usage"><span>Usage</span> : insert a class <code>.huge</code> before the class <code>.breadcrumb</code>.</p><div class="source">
 <pre>
 <code class="html hljs xml">
 &lt;div class=&quot;ui huge breadcrumb&quot;&gt;
