--- a/design/component/breadcrumb.html
+++ b/design/component/breadcrumb.html
@@ -46,7 +46,7 @@
             <div class="column" id="content">
                 <!-- Content -->
                 <div class="category">component</div>
-                <h1 class="name">Button</h1>
+                <h1 class="name">Breadcrumb</h1>
                 <div class="present">
                     <div class="ui secondary pointing menu">
                         <a class="item definition" data-tab="first">Definition</a>
