--- a/design/component/breadcrumb.html
+++ b/design/component/breadcrumb.html
@@ -303,8 +303,18 @@
                 </div>
           
         </div>
-        <div class="row" id="footer">
-            <footer class="footer"></footer>    
+    </div>
+    <div class="ui grid container">
+        <div class="row">
+            <div class="one wide column">
+            </div>
+            <div class="six wide column">
+                     <footer class="footer">
+                    <div class="inner">
+                        <p>© Copyright 2016. Hoiio Pte Ltd.</p>
+                    </div>
+                </footer>
+            </div>
         </div>
     </div>
   
