--- a/design/component/dropdown.html
+++ b/design/component/dropdown.html
@@ -15,7 +15,7 @@
     <script src="../source/js/modernizr-custom.js"></script>
 
     <!-- Bootstrap -->
-	<link rel="stylesheet" type="text/css" href="../../dist/semantic.min.css" />
+	<link rel="stylesheet" type="text/css" href="../dist/semantic.min.css" />
 	<!-- Main styles -->
 	<link rel="stylesheet" type="text/css" href="../source/css/hoiio-semantic.css" />
 	<!-- Highlight -->
@@ -895,7 +895,7 @@ Show me posts by
     </div>
     
     <!-- Latest compiled and minified JavaScript -->
-    <script src="../../dist/semantic.min.js"></script>
+    <script src="../dist/semantic.min.js"></script>
 	<script src="../source/js/highlight.pack.js"></script>
     <script src="../source/js/main.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
