--- a/design/component/label.html
+++ b/design/component/label.html
@@ -793,7 +793,7 @@
                         <div id="sticky-anchor"></div>
                         <div id="sticky">
                         <ul class="category">    
-                            1<li class="title">Contents</li>    
+                            <li class="title">Contents</li>    
                             <li class="item"><a href="#detail-content">Detail</a></li> 
                             <li class="item"><a href="#link-content">Link</a></li> 
                             <li class="title">State</li>    
