--- a/design/source/css/sample.css
+++ b/design/source/css/sample.css
@@ -32,36 +32,50 @@ title:first-letter {
     text-transform:capitalize;
 }
 
-body > .grid {
-    height: 100%;
+
+
+#wrapper .column {
+   width: 30em;
+   margin: 0 auto;
 }
 
-#wrapper > .column {
-   max-width: 35em;
-  margin: 0 auto;
+
+
+
+/*-----------------------------
+    Header 
+-------------------------------*/
+.first{
+    margin-top: 60px;   
 }
 
-.ui.header{
-    margin-bottom: 40px;
-    font-weight: 300;
-    text-align: left;
+img{
+    width: 115px;
 }
 
-@media only screen and (min-width: 992px){
-    /*#wrapper > .column {
-        margin: 0 18em;
-    }*/
-    .ui.segment{
-    padding: 50px 70px 40px 70px !important;
+
+/*-----------------------------
+     Heading
+-------------------------------*/
+
+.second{
+    margin-top: 40px;   
 }
-    h1.ui.header{
-        font-size: 2.5rem !important;
-    }
-    
-    img{
-        margin:60px 0 !important;
-    }
+
+/*-----------------------------
+     Form
+-------------------------------*/
+
+.third{
+    margin-bottom: 100px;   
 }
+
+
+
+/*-----------------------------
+    Label 
+-------------------------------*/
+/*
 .ui.form .field>label {
     display: block;
     margin: 0 0 0.5rem;
@@ -73,25 +87,12 @@ body > .grid {
    
 }
 
-img{
-    width: 115px;
-    margin:40px 0;
-}
+*/
 
-.ui.segment{
-    padding: 35px;
-    border-radius: 6px;
-}
 
-h1.ui.header{
-        font-size:2rem;
-    }
-
-.form{
-    padding-bottom: 60px;
-    
-}
-
+/*-----------------------------
+    Instruction
+-------------------------------*/
 .instruction{
     font-weight: 500;
     margin-top: 0px;
@@ -100,9 +101,6 @@ h1.ui.header{
 }
 
 .instruction a{
-    color: #414141;
-    text-decoration: underline;
-    opacity: 0.6;
     font-weight: 300;
     
 }
@@ -132,6 +130,52 @@ h1.ui.header{
     opacity: 1;
 }
 
-.form > .field:last-child{
- padding-top: 0.6em !important;
+
+/*-----------------------------
+    Modal
+-------------------------------*/
+
+/* Tiny Modal Width */
+
+@media only screen and (max-width: 767px) {
+  .ui.login.modal {
+    width: 95%;
+    margin: 0em 0em 0em -47.5%;
+  }
 }
+
+@media only screen and (min-width: 768px) {
+  .ui.login.modal {
+    width: 520px;
+    margin: 0em 0em 0em -260px;
+  }
+}
+
+
+.ui.login.modal>.header{
+    padding: 40px 40px 40px 40px !important;
+    border-bottom: 0;
+    font-size: 30px;
+}
+
+.ui.login.modal>.content{
+    padding: 0 40px 70px 40px !important;
+}
+
+
+.ui.login.modal>.actions{
+    padding: 20px 40px !important;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
